--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -7,8 +7,19 @@
     <title>Login</title>
     <link rel="stylesheet" href="/style/form-style.css" />
     <script src="login.js" defer></script>
+    
   </head>
   <body>
+    <header>
+    <div class = "navbar">
+    <nav class = "nav">
+      <ul class= "ulist">
+        <li><a href="/">Home</a></li>
+        <li><a href="signup">SignUp</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
     <div class="outer-container">
       <div class="inner-container">
         <h1>Login</h1>
