--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -9,7 +9,17 @@
     <script src="signup.js" defer></script>
   </head>
   <body>
-    <div class="outer-container">
+    <header>
+      <div class = "navbar">
+      <nav class = "nav">
+        <ul class= "ulist">
+          <li><a href="/">Home</a></li>
+          <li><a href="login">Login</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+    <div class="outer-container size" id  = "outer">
       <div class="inner-container">
         <h1>Sign up</h1>
         <form id="signup" novalidate>
